--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,6 +17,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
+      - uses: actions/setup-java@v2
+      - with:
+          channel: 'stable'
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
       # You can specify other versions if desired, see documentation here:
@@ -25,7 +29,8 @@ jobs:
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
 
       - name: Install dependencies
-        run: cd frontend/; flutter pub get
+        run: cd frontend/
+             flutter pub get
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       # - name: Verify formatting
@@ -39,4 +44,13 @@ jobs:
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
       - name: Run tests
-        run: cd frontend/; flutter test
+        run: cd frontend/
+             flutter test
+
+      - name: Build APK
+        run: cd frontend/
+             flutter build apk
+        
+      - name: Build bundle
+        run: cd frontend/
+             flutter build appbundle
