--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -24,6 +24,7 @@ jobs:
     - uses: subosito/flutter-action@v2
       with:
         flutter-version: '3.7.7'
+    - run: cd frontend/
     - run: flutter pub get
     - run: flutter test
     - run: flutter build apk
