--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Dart
+name: Flutter
 
 on:
   push:
@@ -25,14 +25,16 @@ jobs:
       with:
         channel: 'stable'
 
+# Update dependancies
+# 'cd frontend;' is needed with every action since flutter root dir is in 'futsalmatchup/frontend/'
     - run: cd frontend/; 
            flutter pub get
-    
+# Runs the tests
     - run: cd frontend/;
            flutter test
-    
+# Builds application
     - run: cd frontend/;
            flutter build apk
-   
+# Creates an app bundle
     - run: cd frontend/;
            flutter build appbundle
