--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -33,5 +33,15 @@ jobs:
     - run: cd frontend/;
            flutter test
 # Builds application in linux env
+    - run: |
+        sudo apt-get update -y
+        sudo apt-get install -y ninja-build libgtk-3-dev
+
+    - run: cd frontend/;
+           flutter config --enable-linux-desktop
+    
     - run: cd frontend/;
            flutter build linux
+
+    - run: cd frontend/;
+            flutter build linux
