--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.9.1",
+    "dotenv": "16.4.4"
+
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
