--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "16.4.4",
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
-    "dotenv": "16.4.4"
-
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
+    "winston": "^3.11.0"
   }
 }
