--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -14,6 +14,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend/
     
     steps:
     - uses: actions/checkout@v3
@@ -27,18 +30,14 @@ jobs:
 
 # Update dependancies
 # 'cd frontend;' is needed with every action since flutter root dir is in 'futsalmatchup/frontend/'
-    - run: cd frontend/; 
-           flutter pub get
+    - run: flutter pub get
 # Runs the tests
-    - run: cd frontend/;
-           flutter test
+    - run: flutter test
 # Builds application in linux env
     - run: |
         sudo apt-get update -y
         sudo apt-get install -y ninja-build libgtk-3-dev
 
-    - run: cd frontend/;
-           flutter config --enable-linux-desktop
+    - run: flutter config --enable-linux-desktop
     
-    - run: cd frontend/;
-           flutter build linux
+    - run: flutter build linux
