--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,4 +18,4 @@ jobs:
           node-version: '20.x'
       - run: npm ci
       - run: npm run build --if-present
-      - run: npx jest
+      - run: npm test
