--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,13 @@
 FROM node:21
 WORKDIR /app
-COPY . /app/
-RUN npm install
+
+COPY ./package* /app
+
+RUN npm ci
+
+COPY ./**/*js /app
+COPY ./**/*sql /app
+
 EXPOSE 3000
-CMD npm start
+
+CMD ["npm", "start"]
