--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -2,9 +2,11 @@ name: Node.js CI
 
 on: [push]
 
+env:
+  ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -15,7 +17,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: "20.x"
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
