--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
   flutter_rating_bar: ^4.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
