chore: refractor backend into node/ and flask/

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./backend/
+        working-directory: ./backend/node/
 
     steps:
       - uses: actions/checkout@v4
