--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -34,9 +34,9 @@ jobs:
 # Runs the tests
     - run: flutter test
 # Builds application in linux env
-    - run: |
-        sudo apt-get update -y
-        sudo apt-get install -y ninja-build libgtk-3-dev
+    # - run: |
+    #     # sudo apt-get update -y
+    #     # sudo apt-get install -y ninja-build libgtk-3-dev
 
     - run: flutter config --enable-linux-desktop
     
