--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_paypal_checkout: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,12 +38,12 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_rating_bar: ^4.0.0
   provider: ^6.1.2
-  http: ^1.2.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
