--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -19,6 +19,7 @@ jobs:
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}'
+          expose_default_credentials: true
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v2'
