--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - id: 'auth'
-      - uses: 'google-github-actions/auth@v2'
+        uses: 'google-github-actions/auth@v2'
         env:
           PROJECT_ID: ${{ secrets.PROJECT_ID }}
           WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
