fix: add a function to convert json to pandas dataframe

--- a/backend/flask/Dockerfile
+++ b/backend/flask/Dockerfile
@@ -2,12 +2,12 @@ FROM python:3.10
 
 WORKDIR /app
 
-COPY requirements.txt /app
+COPY requirements.txt .
 
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN pip3 install -r requirements.txt --verbose
 
-COPY . ./app
+COPY . .
 
 EXPOSE 8080
 
-CMD [ "python3", "-m", "flask", "run", "--host=0.0.0.0", "--port=8080" ]
+CMD [ "python3", "app.py" ]
